--- a/style.css
+++ b/style.css
@@ -287,6 +287,9 @@ hr:after {
 .navbar-default {
 	margin-bottom: 0;
 }
+ul.dropdown-menu{
+	text-align: center;
+}
 
 /* Hover */
 .navbar-default .navbar-nav > li > a:hover,
@@ -309,6 +312,9 @@ hr:after {
 	.navbar-default .navbar-nav > li:last-child > a {
 		padding-right: 0;
 	}
+	ul.dropdown-menu {
+		text-align: left;
+}
 }
 
 /*-----------------------------------------------
